platform/deploy/infra/loki/gateway/loki-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: loki-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3100
        name: loki-https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: loki-gateway-tls
      hosts:
        - "loki.threadforge.local"
